--- a/class/main.css
+++ b/class/main.css
@@ -51,7 +51,7 @@ a:link, a:visited, a:hover, a:active {
 
 *::-webkit-scrollbar { width: 0 !important }
 
-#attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #att2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
+#attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
     display: none;
 }
 
@@ -67,7 +67,7 @@ a:link, a:visited, a:hover, a:active {
     text-align: left;
 }
 
-#nameList2 {
+#nameList2, #nameList3 {
     height: 200px;
     margin-top: 20px !important;
     overflow-y: auto;
@@ -98,7 +98,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 
-#att2Pop {
+#att2Pop, #att3Pop {
     border-bottom: 2px solid white;
     background-color: #222;
     height: 401px;
@@ -162,6 +162,12 @@ a:link, a:visited, a:hover, a:active {
     margin: 0px;
 }
 
+.secretButton3 {
+    height: 50px;
+    width: 130px;
+    margin: 0px;
+}
+
 .addButton {
     font-family: Font-90-Icons;
     font-weight: bolder;
@@ -210,7 +216,7 @@ a:link, a:visited, a:hover, a:active {
     display: none;
 }
 
-#search, #search2, #searchLog {
+#search, #search2, #search3, #searchLog {
     height: 30px;
     width: 300px;
     font-size: 20px;
