--- a/class/main.css
+++ b/class/main.css
@@ -813,7 +813,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .tableHeaderRow td {
-    background-color: cornflowerblue !important;
+    background-color: #3478F6 !important;
 }
 
 #rankChartTable th, #rankChartTable td {
@@ -946,7 +946,7 @@ a:link, a:visited, a:hover, a:active {
 .asmvInfoTable td {
     padding: 5px;
     width: 50%;
-    height: 50px;
+    height: 65px;
 }
 
 .tableSider {
