--- a/class/main.css
+++ b/class/main.css
@@ -56,7 +56,7 @@ a:link, a:visited, a:hover, a:active {
 
 *::-webkit-scrollbar { width: 0 !important }
 
-#photosNeededPop, #emailsNeededPop, #dataPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayListPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
+#photosNeededPop, #emailsNeededPop, #dataPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayListPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
     display: none;
 }
 
@@ -144,7 +144,6 @@ a:link, a:visited, a:hover, a:active {
     background-color: black;
     border-radius: 25px;
     font-size: 25px;
-    cursor: pointer;
 }
 
 .secretButton {
@@ -182,7 +181,6 @@ a:link, a:visited, a:hover, a:active {
     background-color: black;
     border-radius: 25px;
     margin: 20px auto;
-    cursor: pointer;
 }
 
 #mainMenuButton {
@@ -248,7 +246,6 @@ a:link, a:visited, a:hover, a:active {
     font-size: 15px;
     border: 1px solid white;
     border-radius: 10px;
-    cursor: pointer;
     display: none;
 }
 
@@ -444,7 +441,6 @@ a:link, a:visited, a:hover, a:active {
     margin-bottom: 14.5px;
     font-size: 20px;
     background-color: black;
-    cursor: pointer;
 }
 
 #topMenuContainer {
@@ -501,17 +497,14 @@ a:link, a:visited, a:hover, a:active {
 
 .backButton {
     padding-top: 3px;
-    cursor: pointer;
 }
 
 .homeButton {
     padding-top: 2px;
-    cursor: pointer;
 }
 
 .name {
     margin: 0px 0px 15px;
-    cursor: pointer;
 }
 
 .name2 {
@@ -631,7 +624,6 @@ a:link, a:visited, a:hover, a:active {
 
 .note {
     font-size: 20px;
-    cursor: pointer;
 }
 
 #enterReasonTextField, #addNote, #editNote, #addTeacherNote, #editTeacherNote {
@@ -699,20 +691,6 @@ a:link, a:visited, a:hover, a:active {
 #editStudentPop p, #newStudentPop p {
     font-size: 16px;
     margin: 20px auto 10px auto;
-}
-
-#asPage1, #asPage2, #asPage3 {
-    width: 297.5px;
-    height: 385px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: white;
-    cursor: pointer;
-}
-
-#asPage1, #asPage2 {
-    margin-bottom: 10px;
 }
 
 #randomFilter {
@@ -829,10 +807,6 @@ a:link, a:visited, a:hover, a:active {
 #rankProgressTableP, #totalProgressTableP, #asProgressTableP, #mvProgressTableP, #attProgressTableP, #totalParticipationTableP {
     margin-top: 35px;
     margin-bottom: 5px;
-}
-
-#rankProgressTableDiv, #attProgressTableDiv { 
-    cursor: pointer;
 }
 
 #studentStatsTopContainerDiv {
@@ -967,4 +941,8 @@ a:link, a:visited, a:hover, a:active {
 
 #statsClassRank {
     font-size: 18px !important;
+}
+
+#dispStudentPhoto, .roundButton, .button, .asButton, .mvButton, .studentPopButtons, .backButton, .homeButton, .name, .note, #rankProgressTableDiv, #attProgressTableDiv, #team1ListDiv, #team2ListDiv, #scannedImage {
+    cursor: pointer;
 }
